--- a/src/views/Beer/Beer.module.css
+++ b/src/views/Beer/Beer.module.css
@@ -2,24 +2,26 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 .beerSection {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.beerSectionDivider {
-  margin: 20px 0px;
+.divider {
+  margin: 10px 0px;
 }
 
-.beerIcon {
+.type {
+  margin-bottom: 60px;
+}
+
+.icon {
   margin-right: 20px;
 }
 
-.button {
+.backButton {
   margin-top: 20px;
-  position: 'fixed';
-  right: '16px';
-};
+}
